back-admin-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-admin-deploy
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  selector:
    matchLabels:
      tier: back-admin
  replicas: 1
  template:
    metadata:
      labels:
        tier: back-admin
    spec:
      containers:
        - name: back-admin
          image: 916553408917.dkr.ecr.ap-northeast-2.amazonaws.com/back-admin:8
          ports:
            - containerPort: 4003
              protocol: TCP
          volumeMounts:
            - name: ebs-volume
              mountPath: /data
          resources:
            requests:
              cpu: 200m
              memory: 200M
      volumes:
        - name: ebs-volume
          persistentVolumeClaim:
            claimName: ebs-pvc
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: tier
                    operator: In
                    values:
                      - back-delivery
              topologyKey: "kubernetes.io/hostname"
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: tier
                    operator: In
                    values:
                      - back-admin
              topologyKey: "kubernetes.io/hostname"
