back-admin-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-admin-svc
spec:
  selector:
    tier: back-admin
  type: NodePort
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 31115
