back-delivery-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-delivery-svc
spec:
  selector:
    tier: back-delivery
  type: NodePort
  ports:
    - port: 80
      targetPort: 4001
      nodePort: 31117
