back-user-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-user-svc
spec:
  selector:
    tier: back-user
  type: NodePort
  ports:
    - port: 80
      targetPort: 4002
      nodePort: 31118
