front-user-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-user-svc
spec:
  selector:
    tier: front-user
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 31113
