back-user-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: back-user-ing
  annotations: # AWS에서 ALB로 사용할수 있게 함
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: back-user-svc
                port:
                  number: 80
