front-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-ing
  annotations: # AWS에서 ALB로 사용할수 있게 함
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:916553408917:certificate/804ab0bf-a9e0-4567-8a6e-79316e4d2377, arn:aws:acm:ap-northeast-2:916553408917:certificate/811bd9b0-5208-4315-be52-292ec41f3d41
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"

spec:
  rules:
    - host: exqress-deliver.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-delivery-svc
                port:
                  number: 80
    - host: exqress.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-user-svc
                port:
                  number: 80
